	* configs/freedom-kl25z:  Support for the Freedom KL25Z board
	  contributed by Alan Carvalho de Assis.  NOTE:  This is still
	  very much a work inprogress as of this initial commit
	  (2013-04-16).
	* arm/arm/src/armv6-m and arch/arm/include/armv6-m:  Ooops.  Fix
	  a major screw-up:  The Cortex-M0 has no BASEPRI register but
	  the current logic was using it to manage interrupts.  Switch
	  to using the PRIMASK.  This means that hardfaults will (again)
	  occur when SVC instructions are executed (2013-4-16).
	* configs/stm3240g-eval/ostest:  Converted to use the kconfig-frontends
	  tools (2013-4-17).
	* sched/task_exithook.c:  Don't flush the streams until the
	  final thread of the group exits.  Flushing may cause the
	  thread to get suspended at a bad time and other threads in the
	  group may run while the exiting thread is in an unhealthy state.
	  This can cause crashes under certain circumstance.  This is a
	  critical bugfix (2013-4-18).
	* drivers/mtd/ramtron.c:  Extended to support the FM25V01 device.
	  Contributed by Lorenz Meier (2013-4-18).
	* sched/task_deletecurrent.c and task_exit.c, arch/*/up_exit.c:
	  Renamed task_deletecurrent() and task_exit() since it really
	  handles the architecture independent part of _exit().  _exit()
	  is used internally, but if it is called from the user, it should
	  unregister any atexit() or on_exit() functions (2013-4-18).
	* tools/kconfig2html.c: This is the beginning of a tool to
	  replace the hand-generated documentation of the NuttX configruation
	  variables with auto-generated documentation.  The initial checkin
	  is an incomplete, poorly structured prototype that I hope to
	  evolve into a useful tool (2014-4-20).
	* libc/string/lib_strchr.c:  strchr(str, '\0') should return a
	  pointer to the end of the string, not NULL.  From Petteri
	  Aimonen (2014-4-22).
	* fs/fat/fs_writefat.c: mkfatfs was writing the boot code to the
	  wrong location.  From Petteri Aimonen (2014-4-22).