@@ -31,6 +31,7 @@
       <li><a href="NuttXGettingStarted.html" target="main">Getting Started</a></li>
       <li><a href="NuttxUserGuide.html" target="main">User Guide</a></li>
       <li><a href="NuttxPortingGuide.html" target="main">Porting Guide</a></li>
+      <li><a href="NuttXConfigVariables.html">Configuration Variables</a></li>
       <li><a href="NuttShell.html" target="main">NuttShell (NSH)</a></li>
       <li><a href="NuttXBinfmt.html" target="main">Binary Loader</a></li>
       <li><a href="NuttXNxFlat.html" target="main">NXFLAT</a></li>
@@ -42,6 +43,7 @@
       <li><a href="README.html" target="main">README Files</a></li>
       <li><a href="ChangeLog.txt" target="main">Change Log</a></li>
       <li><a href="TODO.txt" target="main">To-Do List</a></li>
+    </td>
   </tr>
   <tr>
     <td align="center" valign="top" width="22">
