@@ -4225,6 +4225,14 @@ void (*notify)(FAR struct pm_callback_s *cb, enum pm_state_e pmstate);
   The following variables are recognized by the build (you may
   also include architecture-specific settings).
 </p>
+<p>
+  <b>Note</b>.
+  This appendix is deprecated.
+  Documentation of NuttX configuration is now provided in a separate, auto-generated <a href="NuttXConfigVariables.html">Configuration Variable Document</a>.
+  That configuration variable document is generated using the <a href="http://sourceforge.net/p/nuttx/git/ci/master/tree/nuttx/tools/kconfig2html.c">kconfig2html</a> tool
+  That tool analyzes the NuttX <code>Kconfig</code> files and generates the HTML document.
+  As a consequence, this file may not be present at any given time but can be regenerated following the instructions in <code>tools</code> directory <a href="http://sourceforge.net/p/nuttx/git/ci/master/tree/nuttx/tools/README.txt">README</a> file.
+</p>
 
 <h2>Architecture selection</h2>
 <p>
