@@ -13,7 +13,7 @@
       <h1><big><font color="#3c34ec"><i>NuttX Operating System<p>User's Manual</i></font></big></h1>
       <p><small>by</small></p>
       <p>Gregory Nutt<p>
-      <p>Last Updated: February 13, 2013</p>
+      <p>Last Updated: Aprill 22, 2013</p>
     </td>
   </tr>
 </table>
@@ -8632,7 +8632,7 @@ FAR void *mmap(FAR void *start, size_t length, int prot, int flags, int fd, off_
 <p>NuttX includes a simple interface layer based on uIP (see <a href="http://www.sics.se/~adam/uip/index.php/Main_Page">http://www.sics.se</a>).
 NuttX supports subset of a standard socket interface to uIP.
 These network feature can be enabled by settings in the architecture
-<a href="NuttxPortingGuide.html#apndxconfigs">configuration file</a>.
+<a href="NuttXConfigVariables.html">configuration file</a>.
 Those socket APIs are discussed in the following paragraphs.</p>
 <ul>
 <li>
